--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,8 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:background="@android:color/holo_purple"
+        android:layout_marginTop="16dp"
         android:paddingLeft="100dp"
         android:paddingTop="10dp"
         android:paddingRight="100dp"
@@ -22,20 +22,15 @@
         android:textColor="@color/white"
         android:textSize="32dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="128dp"
         android:layout_height="128dp"
-        android:layout_marginStart="141dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="142dp"
+        android:layout_marginTop="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
@@ -45,11 +40,8 @@
         android:id="@+id/imageView4"
         android:layout_width="128dp"
         android:layout_height="128dp"
-        android:layout_marginStart="141dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="142dp"
+        android:layout_marginTop="50dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:srcCompat="@drawable/ic_launcher_foreground" />
@@ -58,12 +50,10 @@
         android:id="@+id/tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="118dp"
         android:layout_marginTop="35dp"
-        android:layout_marginEnd="118dp"
         android:text="Hello World!"
         android:textAlignment="center"
-        android:textSize="32sp"
+        android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -92,6 +82,7 @@
         android:layout_marginTop="30dp"
         android:text="FOLLOW"
         android:textSize="16dp"
+        app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
 
@@ -100,9 +91,10 @@
         android:layout_width="20mm"
         android:layout_height="8mm"
         android:layout_marginTop="30dp"
-        android:layout_marginEnd="30dp"
+        android:layout_margin="30dp"
         android:text="MESSAGE"
         android:textSize="16dp"
+        app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
 
